# user-representations

./: .gitignore  README.md  pyproject.toml
notebooks/: data_preprocessing.ipynb  nn_graph.ipynb  simulate_sessions.ipynb  track_encoder_training.ipynb  user_embedding.ipynb
scripts/: run_preprocessor.py
src/: main.py
src/preprocessor/: preprocessor.py  transformations.py
src/user_representations/autoencoder/: autoencoder.py
src/user_representations/logging_config/: config.json  logging_config.py
src/user_representations/preprocessor/: preprocessor.py  run_preprocessor.py  transformations.py
tests/user_representations/preprocessor/: test_preprocessor.py  test_transformations.py
